Autofill: Check for common angular js prefix when filling exp month.

BUG=602987
TEST=AutofillFieldTest

Review URL: https://codereview.chromium.org/1905143002

Cr-Commit-Position: refs/heads/master@{#389121}

Former-commit-id: d9f8818992a4f18090aeca2cfff70dfc9504571b